<resources>
    <string name="app_name">Visitour</string>
    <string name="subtitulo">Inicia sesion o registrate</string>
    <string name="hint_email">E-Mail</string>
    <string name="hint_pass">Password</string>
    <string name="Main_Iniciar_sesion">Iniciar Sesión</string>
    <string name="Main_Registrarse">Registrarse</string>
    <string name="registrate">Registrate</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_password">Password</string>
    <string name="hint_repetir_password">Repetir password</string>
    <string name="hint_apellido">Apellido</string>
    <string name="toast_pass_no_coincide">Password no coincide</string>
    <string name="validation_correo_valido">Ingrese un correo valido</string>
    <string name="Toast_Registro_Satisfactorio">Registro satisfactorio</string>
    <string name="Toast_error_interno">Error interno</string>
    <string name="toast_ErrorInterno">Error Interno</string>
    <string name="hint_nacionalidad">Nacionalidad</string>
    <string name="toast_registro_satisfactorio">Registro satisfactorio</string>
    <string name="hint_telefono">Telefono</string>
    <string name="toast_login_incorrecto">Correo o password incorrectos</string>
    <string name="toast_login_exitoso">Inicio de sesion exitoso</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_lugares_turisticos">Lugares Turisticos</string>
    <string name="menu_restaurantes">Restaurantes</string>
    <string name="menu_favoritos">Favoritos</string>
    <string name="menu_perfil">Perfil</string>
    <string name="menu_cerca_de_mi">Cerca de mi</string>
</resources>