<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".registro.activity_Registro">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/titulo_registrarse"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="30dp"
        android:textAlignment="center"
        android:text="@string/registrate"
        android:textSize="35sp"
        android:textColor="@color/black"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:hint="@string/hint_email"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titulo_registrarse"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/nombre"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_nombre"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/apellido"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_apellido"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nombre"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/apellido"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <EditText
        android:id="@+id/comprobar_pass"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:hint="@string/hint_repetir_password"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pass"
        android:inputType="text"
        android:importantForAutofill="no"/>

    <Button
        android:id="@+id/botton_registrarse"
        android:layout_width="250dp"
        android:layout_height="100dp"
        android:layout_marginTop="35dp"
        android:backgroundTint="@android:color/holo_red_dark"
        android:text="@string/Main_Registrarse"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/comprobar_pass" />

</androidx.constraintlayout.widget.ConstraintLayout>